// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TableBadge renders correctly with value 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Active",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontFamily": "text",
                  "fontSize": 10,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#B6CDD5",
                "borderRadius": 4,
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "center",
                "paddingHorizontal": 8,
                "paddingVertical": 4,
                "width": "auto",
              },
              false,
              {
                "borderColor": "#8FC1D2",
                "borderWidth": 1,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "flex-start",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "justifyContent": "center",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TableBadge renders with info status (default) 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Info",
              ],
              "props": {
                "style": {
                  "color": "#092E3A",
                  "fontFamily": "text",
                  "fontSize": 10,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#B6CDD5",
                "borderRadius": 4,
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "center",
                "paddingHorizontal": 8,
                "paddingVertical": 4,
                "width": "auto",
              },
              false,
              {
                "borderColor": "#8FC1D2",
                "borderWidth": 1,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "flex-start",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "justifyContent": "center",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TableBadge renders with success status 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Approved",
              ],
              "props": {
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text",
                  "fontSize": 10,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#DCF2E2",
                "borderRadius": 4,
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "center",
                "paddingHorizontal": 8,
                "paddingVertical": 4,
                "width": "auto",
              },
              false,
              {
                "borderColor": "#7FD898",
                "borderWidth": 1,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "flex-start",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "justifyContent": "center",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TableBadge renders with warning status 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Review",
              ],
              "props": {
                "style": {
                  "color": "#B14202",
                  "fontFamily": "text",
                  "fontSize": 10,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#FFE3C6",
                "borderRadius": 4,
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "center",
                "paddingHorizontal": 8,
                "paddingVertical": 4,
                "width": "auto",
              },
              false,
              {
                "borderColor": "#FCC58F",
                "borderWidth": 1,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "flex-start",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "justifyContent": "center",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TableBadge renders with error status 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Rejected",
              ],
              "props": {
                "style": {
                  "color": "#BD1111",
                  "fontFamily": "text",
                  "fontSize": 10,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#FDD7D7",
                "borderRadius": 4,
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "center",
                "paddingHorizontal": 8,
                "paddingVertical": 4,
                "width": "auto",
              },
              false,
              {
                "borderColor": "#F39E9E",
                "borderWidth": 1,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "flex-start",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "justifyContent": "center",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TableBadge renders with icon 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "style": {
                  "marginRight": 8,
                },
                "testID": "icon",
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Complete",
              ],
              "props": {
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text",
                  "fontSize": 10,
                  "fontWeight": "700",
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#DCF2E2",
                "borderRadius": 4,
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "center",
                "paddingHorizontal": 8,
                "paddingVertical": 4,
                "width": "auto",
              },
              false,
              {
                "borderColor": "#7FD898",
                "borderWidth": 1,
              },
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "flex-start",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "justifyContent": "center",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TableBadge renders select field when editing 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "readOnly": true,
                        "style": {
                          "color": "#1C1C1C",
                        },
                        "testID": "text_input",
                        "value": "Option A",
                      },
                      "type": "TextInput",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": {
                          "pointerEvents": "none",
                        },
                        "testID": "icon_container",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "pointerEvents": "box-only",
                      "width": "100%",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "activeOpacity": 1,
                "onPress": [Function],
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "minHeight": 40,
                  "width": "95%",
                },
                "testID": "ios_touchable_wrapper",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "aria-role": "button",
                    "onPress": [Function],
                    "style": {
                      "flex": 1,
                    },
                    "testID": "ios_modal_top",
                  },
                  "type": "Pressable",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": {
                          "flexDirection": "row",
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Done",
                              ],
                              "props": {
                                "allowFontScaling": false,
                                "style": [
                                  {
                                    "color": "#007aff",
                                    "fontSize": 17,
                                    "fontWeight": "600",
                                    "paddingRight": 11,
                                    "paddingTop": 1,
                                  },
                                  {},
                                ],
                                "testID": "done_text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": undefined,
                            "testID": "needed_for_touchable",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "hitSlop": {
                          "bottom": 4,
                          "left": 4,
                          "right": 4,
                          "top": 4,
                        },
                        "onPress": [Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "testID": "done_button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "style": {
                      "alignItems": "center",
                      "backgroundColor": "#f8f8f8",
                      "borderTopColor": "#dedede",
                      "borderTopWidth": 1,
                      "flexDirection": "row",
                      "height": 45,
                      "justifyContent": "space-between",
                      "paddingHorizontal": 10,
                      "zIndex": 2,
                    },
                    "testID": "input_accessory_view",
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "color": undefined,
                            "label": "Please select an option.",
                            "value": "",
                          },
                          "type": "Picker.Item",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "color": undefined,
                            "label": "Option A",
                            "value": "a",
                          },
                          "type": "Picker.Item",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "color": undefined,
                            "label": "Option B",
                            "value": "b",
                          },
                          "type": "Picker.Item",
                        },
                      ],
                      "props": {
                        "onValueChange": [Function],
                        "selectedValue": "a",
                        "testID": "ios_picker",
                      },
                      "type": "Picker",
                    },
                  ],
                  "props": {
                    "style": [
                      {
                        "backgroundColor": "#d0d4da",
                        "justifyContent": "center",
                      },
                      {
                        "height": 215,
                      },
                    ],
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "animationType": undefined,
                "onOrientationChange": [Function],
                "supportedOrientations": [
                  "portrait",
                  "landscape",
                ],
                "testID": "ios_modal",
                "transparent": true,
                "visible": false,
              },
              "type": "Modal",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#9A9A9A",
              },
              false,
            ],
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": undefined,
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "justifyContent": "center",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
